// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders a large IconButton 1`] = `
.c0 {
  background: none;
  border: none;
  width: 3rem;
  height: 3rem;
  padding: 0;
  cursor: pointer;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0 > svg {
  width: 100%;
  height: 100%;
}

.c0:hover {
  -webkit-transform: scale(1.2) rotate(1turn);
  -ms-transform: scale(1.2) rotate(1turn);
  transform: scale(1.2) rotate(1turn);
}

<button
  className="c0"
  size="large"
/>
`;

exports[`IconButton renders a small IconButton 1`] = `
.c0 {
  background: none;
  border: none;
  width: 1rem;
  height: 1rem;
  padding: 0;
  cursor: pointer;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0 > svg {
  width: 100%;
  height: 100%;
}

.c0:hover {
  -webkit-transform: scale(1.2) rotate(1turn);
  -ms-transform: scale(1.2) rotate(1turn);
  transform: scale(1.2) rotate(1turn);
}

<button
  className="c0"
  size="small"
/>
`;

exports[`IconButton renders an IconButton 1`] = `
.c0 {
  background: none;
  border: none;
  width: 3rem;
  height: 3rem;
  padding: 0;
  cursor: pointer;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0 > svg {
  width: 100%;
  height: 100%;
}

.c0:hover {
  -webkit-transform: scale(1.2) rotate(1turn);
  -ms-transform: scale(1.2) rotate(1turn);
  transform: scale(1.2) rotate(1turn);
}

<button
  className="c0"
  size="large"
/>
`;
